--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "the-ecommerce-store",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start":"node server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "author": "",
@@ -17,7 +17,8 @@
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
     "express-fileupload": "^1.2.1",
-    "express-rate-limit": "^6.0.1",
+    "express-mongo-sanitize": "^2.1.0",
+    "express-rate-limit": "^5.4.1",
     "helmet": "^4.6.0",
     "http-status-codes": "^2.2.0",
     "joi": "^17.5.0",
@@ -29,5 +30,9 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
+  },
+  "engines": {
+    "node": "14.x"
   }
+
 }
